--- a/ShoppingProject/appsettings.json
+++ b/ShoppingProject/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=TRD-517; Initial Catalog=EcommerceShoppingProject;Integrated Security=true;"
+    "DefaultConnection": "Data Source=TRD-519; Initial Catalog=ShoppingProject;Integrated Security=true;"
   }
   }
